--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "tween.js": "^16.6.0",
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.2.0",
     "vue-navigation": "^1.1.4",
